2010-10-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove dead grub_efi_mm_fini.

	* grub-core/kern/efi/mm.c (allocated_page): Removed.
	(ALLOCATED_PAGES_SIZE): Likewise.
	(MAX_ALLOCATED_PAGES): Likewise.
	(allocated_pages): Likewise.
	(grub_efi_allocate_pages): Don't record allocated pages.
	(grub_efi_free_pages): Likewise.
	(grub_efi_mm_init): Likewise.
	(grub_efi_mm_fini): Removed.

2010-10-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/efi/mm.c (BYTES_TO_PAGES): Round up instead of down.
	(grub_efi_mm_init): Take into account the memory map size increase.

2010-10-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/ns8250.c (do_real_config): Set port->broken to 0.
	(serial_hw_put): Wait based on real time rather than port reads. Don't
	roken ports.
	* include/grub/serial.h (grub_serial_port): New field broken.

2010-10-16  Robert Millan  <rmh@gnu.org>

	* grub-core/kern/emu/misc.c
	(grub_make_system_path_relative_to_its_root): Fix premature return
	when processing non-root ZFS filesystems.
	Reported by Sergio Talens-Oliag.

2010-10-15  Robert Millan  <rmh@gnu.org>

	* util/grub.d/10_linux.in (list): Expand "vmlinu[zx]" instances to
	guarantee compressed ones are processed first.

2010-10-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/efiemu/main.c (grub_efiemu_prepare): Handle errors from
	grub_efiemu_autocore.

2010-10-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/pc/startup.S (bypass_table): Use 0x1b explicitly
	rather than 0x1b.
	(grub_console_getkey): Use correct jae opcode rather than ja.

2010-10-12  Robert Millan  <rmh@gnu.org>

	* util/grub-mkconfig.in: Merge `GRUB_DISABLE_LINUX_RECOVERY' and
	`GRUB_DISABLE_NETBSD_RECOVERY' into a single `GRUB_DISABLE_RECOVERY'
	variable.  All references updated.

	* util/grub.d/10_kfreebsd.in: Support recovery boot entries.

2010-10-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Correctly distinguish mdraid flavours.
