@@ -19,8 +19,10 @@
 #ifndef GRUB_ACPI_HEADER
 #define GRUB_ACPI_HEADER	1
 
+#ifndef GRUB_DSDT_TEST
 #include <grub/types.h>
 #include <grub/err.h>
+#endif
 
 struct grub_acpi_rsdp_v10
 {
@@ -139,6 +141,7 @@ enum
     GRUB_ACPI_MADT_ENTRY_SAPIC_FLAGS_ENABLED = 1
   };
 
+#ifndef GRUB_DSDT_TEST
 struct grub_acpi_rsdp_v10 *grub_acpi_get_rsdpv1 (void);
 struct grub_acpi_rsdp_v20 *grub_acpi_get_rsdpv2 (void);
 struct grub_acpi_rsdp_v10 *grub_machine_acpi_get_rsdpv1 (void);
@@ -148,6 +151,7 @@ grub_uint8_t grub_byte_checksum (void *base, grub_size_t size);
 grub_err_t grub_acpi_create_ebda (void);
 
 void grub_acpi_halt (void);
+#endif
 
 #define GRUB_ACPI_SLP_EN (1 << 13)
 #define GRUB_ACPI_SLP_TYP_OFFSET 10
